--- a/crawlers/deploy/wyrm-moonworm-crawler.service
+++ b/crawlers/deploy/wyrm-moonworm-crawler.service
@@ -9,7 +9,7 @@ WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 Restart=on-failure
 RestartSec=15s
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli --access-id "${NB_CONTROLLER_ACCESS_ID}" crawl -b wyrm --poa --no-confirmations -s 0
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli --access-id "${NB_CONTROLLER_ACCESS_ID}" crawl --blockchain wyrm --poa --no-confirmations --start 0
 CPUWeight=70
 SyslogIdentifier=wyrm-moonworm-crawler
 
