--- a/crawlers/deploy/wyrm-synchronize.service
+++ b/crawlers/deploy/wyrm-synchronize.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Polygon block with transactions synchronizer
+Description=Wyrm block with transactions synchronizer
 StartLimitIntervalSec=300
 StartLimitBurst=3
 After=network.target
@@ -9,9 +9,9 @@ Restart=on-failure
 RestartSec=15s
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler --access-id "${NB_CONTROLLER_ACCESS_ID}" blocks synchronize --blockchain polygon -c 60 -j 2
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler --access-id "${NB_CONTROLLER_ACCESS_ID}" blocks synchronize --blockchain wyrm -c 0 -j 1
 CPUWeight=90
-SyslogIdentifier=polygon-synchronize
+SyslogIdentifier=wyrm-synchronize
 
 [Install]
 WantedBy=multi-user.target
