--- a/crawlers/deploy/ethereum-orange-dao-reports-tokenonomics.service
+++ b/crawlers/deploy/ethereum-orange-dao-reports-tokenonomics.service
@@ -6,6 +6,6 @@ After=network.target
 Type=oneshot
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.reports_crawler.cli orangedao --moonstream-token {$MOONSTREAM_ORANGE_DAO_QUERIES_DATA_ACCESS_TOKEN} run_tokenomics_orange_dao
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.reports_crawler.cli orangedao --moonstream-token "${MOONSTREAM_ORANGE_DAO_QUERIES_DATA_ACCESS_TOKEN}" run_tokenomics_orange_dao
 CPUWeight=60
-SyslogIdentifier=polygon-orange-dao-reports-tokenonomics
+SyslogIdentifier=ethereum-orange-dao-reports-tokenonomics
