Add suggested changes.

--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -3,6 +3,10 @@ export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
 export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout_Humbug_token_for_crash_reports>"
 
+
+# Entity environment variables
+export MOONSTREAM_ENTITY_URL="https://api.moonstream.to/entity"
+
 # Moonstream environment variables
 export MOONSTREAM_BUGOUT_TIMEOUT_SECONDS=30
 export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream.to,https://www.moonstream.to"
