--- a/nodes/node_balancer/sample.env
+++ b/nodes/node_balancer/sample.env
@@ -1,6 +1,6 @@
 # Required environment variables for load balancer
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
-export NB_APPLICATION_ID="<application_id_to_controll_access>"
+export MOONSTREAM_APPLICATION_ID="<application_id_to_controll_access>"
 export NB_CONTROLLER_TOKEN="<token_of_controller_user>"
 export NB_CONTROLLER_ACCESS_ID="<controller_access_id_for_internal_usage>"
 
