--- a/crawlers/deploy/polygon-moonworm-crawler.service
+++ b/crawlers/deploy/polygon-moonworm-crawler.service
@@ -9,7 +9,7 @@ WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 Restart=on-failure
 RestartSec=15s
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli --access-id "${NB_CONTROLLER_ACCESS_ID}" crawl -b polygon
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli --access-id "${NB_CONTROLLER_ACCESS_ID}" crawl -b polygon  --confirmations 60 --min-blocks-batch 20
 CPUWeight=70
 SyslogIdentifier=polygon-moonworm-crawler
 
