--- a/nodes/node_balancer/sample.env
+++ b/nodes/node_balancer/sample.env
@@ -2,6 +2,7 @@
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export NB_BUGOUT_TIMEOUT_SECONDS=15
 export MOONSTREAM_APPLICATION_ID="<application_id_to_controll_access>"
+export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream.to,https://portal.moonstream.to"
 export NB_CONTROLLER_TOKEN="<token_of_controller_user>"
 export NB_CONTROLLER_ACCESS_ID="<controller_access_id_for_internal_usage>"
 
