--- a/probes/deploy/probes.service
+++ b/probes/deploy/probes.service
@@ -7,7 +7,8 @@ StartLimitBurst=3
 [Service]
 WorkingDirectory=/home/ubuntu/api/probes
 EnvironmentFile=/home/ubuntu/engineapi-secrets/app.env
-ExecStart=/home/ubuntu/api/probes/probes service
+ExecStart=/home/ubuntu/api/probes/probes service \
+    --config /home/ubuntu/.probes/engine-clean-call-requests.json
 Restart=on-failure
 RestartSec=15s
 SyslogIdentifier=probes
