Updated requirements for engineapi with redis

--- a/engineapi/requirements.txt
+++ b/engineapi/requirements.txt
@@ -1,76 +1,64 @@
-aiohttp==3.8.3
-aiosignal==1.2.0
-alembic==1.8.1
-anyio==3.6.2
+aiohttp==3.8.4
+aiosignal==1.3.1
+anyio==3.7.0
 async-timeout==4.0.2
-attrs==22.1.0
+attrs==23.1.0
 base58==2.1.1
-bitarray==2.6.0
-black==22.10.0
-boto3==1.24.93
-botocore==1.27.93
-Brownie==0.5.1
-bugout==0.2.2
-certifi==2022.9.24
-charset-normalizer==2.1.1
+bitarray==2.7.6
+boto3==1.27.0
+botocore==1.30.0
+bugout==0.2.9
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
-cytoolz==0.12.0
+cytoolz==0.12.1
 dataclassy==0.11.1
 eip712==0.1.0
 eth-abi==2.2.0
 eth-account==0.5.9
-eth-hash==0.5.0
+eth-hash==0.5.2
 eth-keyfile==0.5.1
 eth-keys==0.3.4
 eth-rlp==0.2.1
 eth-typing==2.3.0
 eth-utils==1.9.5
-fastapi==0.85.1
-frozenlist==1.3.1
-greenlet==1.1.3.post0
+exceptiongroup==1.1.2
+fastapi==0.99.1
+frozenlist==1.3.3
+greenlet==2.0.2
 h11==0.14.0
 hexbytes==0.2.3
 idna==3.4
-importlib-metadata==5.0.0
-importlib-resources==5.10.0
 ipfshttpclient==0.8.0a2
-isort==5.10.1
 jmespath==1.0.1
-jsonschema==4.16.0
-lru-dict==1.1.8
-Mako==1.2.3
-MarkupSafe==2.1.1
+jsonschema==4.17.3
+lru-dict==1.2.0
 multiaddr==0.0.9
-multidict==6.0.2
-mypy==0.982
-mypy-extensions==0.4.3
+multidict==6.0.4
 netaddr==0.8.0
 parsimonious==0.8.1
-pathspec==0.10.1
-pkgutil_resolve_name==1.3.10
-platformdirs==2.5.2
 protobuf==3.19.5
-psycopg2-binary==2.9.4
-pycryptodome==3.15.0
-pydantic==1.10.2
-pyrsistent==0.18.1
+psycopg2-binary==2.9.6
+pycryptodome==3.18.0
+pydantic==1.10.10
+pyrsistent==0.19.3
 python-dateutil==2.8.2
-requests==2.28.1
+python-multipart==0.0.6
+redis==4.6.0
+requests==2.31.0
 rlp==2.0.1
-s3transfer==0.6.0
+s3transfer==0.6.1
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==1.4.42
-starlette==0.20.4
+SQLAlchemy==2.0.17
+starlette==0.27.0
 tabulate==0.9.0
-tomli==2.0.1
 toolz==0.12.0
-tqdm==4.64.1
-typing_extensions==4.4.0
-urllib3==1.26.12
-uvicorn==0.18.3
+tqdm==4.65.0
+typing_extensions==4.7.1
+urllib3==1.26.16
+uvicorn==0.22.0
 varint==1.0.2
-web3==5.31.1
+web3==5.31.4
 websockets==9.1
-yarl==1.8.1
-zipp==3.9.0
+yarl==1.9.2
