--- a/probes/deploy/probes.service
+++ b/probes/deploy/probes.service
@@ -6,9 +6,8 @@ StartLimitBurst=3
 
 [Service]
 WorkingDirectory=/home/ubuntu/api/probes
-EnvironmentFile=/home/ubuntu/engineapi-secrets/app.env
-ExecStart=/home/ubuntu/api/probes/probes service \
-    --config /home/ubuntu/.probes/engine-clean-call-requests.json
+EnvironmentFile=/home/ubuntu/probes-secrets/app.env
+ExecStart=/home/ubuntu/api/probes/probes service --config /home/ubuntu/.probes/engine-clean-call-requests.json
 Restart=on-failure
 RestartSec=15s
 SyslogIdentifier=probes
