--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -7,7 +7,11 @@ export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout_Humbug_token_for_crash_reports>"
 # Entity environment variables
 export MOONSTREAM_ENTITY_URL="https://api.moonstream.to/entity"
 
+# Engine environment variables
+export MOONSTREAM_ENGINE_URL="https://engineapi.moonstream.to"
+
 # Moonstream environment variables
+export MOONSTREAM_API_URL="https://api.moonstream.to"
 export MOONSTREAM_BUGOUT_TIMEOUT_SECONDS=30
 export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream.to,https://www.moonstream.to"
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
