--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -49,3 +49,6 @@ export MOONSTREAM_S3_PUBLIC_DATA_BUCKET="<public_bucket>"
 export MOONSTREAM_S3_PUBLIC_DATA_BUCKET_PREFIX="dev"
 export MOONSTREAM_PUBLIC_QUERIES_DATA_ACCESS_TOKEN="<access token for run queries for public dashboards>"
 export INFURA_PROJECT_ID="<infura_project_id>"
+
+# Leaderboard worker
+export MOONSTREAM_LEADERBOARD_GENERATOR_JOURNAL_ID=<Bugout_journal_id_for_leaderboards>
