Fixes to work with spire entity

--- a/moonstreamapi/mypy.ini
+++ b/moonstreamapi/mypy.ini
@@ -8,3 +8,9 @@ ignore_missing_imports = True
 
 [mypy-pyevmasm.*]
 ignore_missing_imports = True
+
+[mypy-requests.*]
+ignore_missing_imports = True
+
+[mypy-dateutil.*]
+ignore_missing_imports = True
