--- a/.github/workflows/release.moonstreamapi.yml
+++ b/.github/workflows/release.moonstreamapi.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and publish
         env:
           TWINE_USERNAME: "__token__"
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN_MOONSTREAMAPI }}
         run: |
           python setup.py sdist bdist_wheel
           twine upload dist/*
