--- a/engineapi/sample.env
+++ b/engineapi/sample.env
@@ -19,3 +19,6 @@ export MOONSTREAM_MUMBAI_WEB3_PROVIDER_URI="<JSON_RPC_API_URL>"
 export MOONSTREAM_POLYGON_WEB3_PROVIDER_URI="<JSON_RPC_API_URL>"
 export MOONSTREAM_XDAI_WEB3_PROVIDER_URI="<JSON_RPC_API_URL>"
 export ENGINE_NODEBALANCER_ACCESS_ID="<access_id_for_Moonstream_Node_Balancer-if_provided_it_is_interpolated_into_provider_URIs>"
+
+# leaderboard config
+export MOONSTREAM_LEADERBOARD_CONFIGURATION_JOURNAL_ID="<config_journal_id>"
