--- a/moonstreamapi/configs/sample.env
+++ b/moonstreamapi/configs/sample.env
@@ -4,6 +4,7 @@ export MOONSTREAM_DB_URI_READ_ONLY="postgresql://<username>:<password>@<db_host>
 export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream.to,https://www.moonstream.to"
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
+export BUGOUT_SPIRE_EXTERNAL_URL="https://spire.bugout.dev"
 export MOONSTREAM_APPLICATION_ID="<issued_bugout_application_id>"
 export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Access_token_to_application_resources>"
 export MOONSTREAM_POOL_SIZE=0
