--- a/crawlers/deploy/xai-sepolia-moonworm-crawler.service
+++ b/crawlers/deploy/xai-sepolia-moonworm-crawler.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Xai testnet moonworm crawler
+Description=Xai sepolia moonworm crawler
 After=network.target
 StartLimitIntervalSec=300
 StartLimitBurst=3
@@ -9,9 +9,9 @@ WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 Restart=on-failure
 RestartSec=15s
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli --access-id "${NB_CONTROLLER_ACCESS_ID}" crawl -b xai_testnet --confirmations 10 --min-blocks-batch 20
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli --access-id "${NB_CONTROLLER_ACCESS_ID}" crawl -b xai_sepolia --confirmations 10 --min-blocks-batch 20
 CPUWeight=70
-SyslogIdentifier=xai-test-moonworm-crawler
+SyslogIdentifier=xai-sepolia-moonworm-crawler
 
 [Install]
 WantedBy=multi-user.target
