--- a/crawlers/deploy/arbitrum-nova-synchronize.service
+++ b/crawlers/deploy/arbitrum-nova-synchronize.service
@@ -9,7 +9,7 @@ Restart=on-failure
 RestartSec=15s
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler --access-id "${NB_CONTROLLER_ACCESS_ID}" blocks synchronize --blockchain arbitrum_nova -c 10 -j 2
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler blocks synchronize --blockchain arbitrum_nova -c 10 -j 2
 CPUWeight=90
 SyslogIdentifier=arbitrum-nova-synchronize
 
