--- a/crawlers/deploy/polygon-synchronize.service
+++ b/crawlers/deploy/polygon-synchronize.service
@@ -9,7 +9,7 @@ Restart=on-failure
 RestartSec=15s
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler --access-id "${NB_CONTROLLER_ACCESS_ID}" blocks synchronize --blockchain polygon --confirmations 40 --jobs 2
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler blocks synchronize --blockchain polygon --confirmations 40 --jobs 2
 CPUWeight=90
 SyslogIdentifier=polygon-synchronize
 
