--- a/crawlers/deploy/zksync-era-sepolia-synchronize.service
+++ b/crawlers/deploy/zksync-era-sepolia-synchronize.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Arbitrum Sepolia block with transactions synchronizer
+Description=ZkSync Era block with transactions synchronizer
 StartLimitIntervalSec=300
 StartLimitBurst=3
 After=network.target
@@ -9,9 +9,9 @@ Restart=on-failure
 RestartSec=15s
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler blocks synchronize --blockchain arbitrum_sepolia -c 10 -j 2
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler blocks synchronize --blockchain zksync_era_sepolia -c 20 -j 2
 CPUWeight=90
-SyslogIdentifier=arbitrum-sepolia-synchronize
+SyslogIdentifier=zksync-era-sepolia-synchronize
 
 [Install]
 WantedBy=multi-user.target
