--- a/crawlers/deploy/xai-sepolia-moonworm-crawler.service
+++ b/crawlers/deploy/xai-sepolia-moonworm-crawler.service
@@ -9,7 +9,7 @@ WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 Restart=on-failure
 RestartSec=15s
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli --access-id "${NB_CONTROLLER_ACCESS_ID}" crawl -b xai_sepolia --confirmations 10 --min-blocks-batch 20
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli crawl -b xai_sepolia --confirmations 10 --min-blocks-batch 20
 CPUWeight=70
 SyslogIdentifier=xai-sepolia-moonworm-crawler
 
