--- a/moonstreamapi/requirements.txt
+++ b/moonstreamapi/requirements.txt
@@ -36,6 +36,7 @@ jsonschema==4.17.0
 lru-dict==1.1.8
 Mako==1.2.3
 MarkupSafe==2.1.1
+moonstream==0.1.1
 moonstreamdb==0.3.12
 multiaddr==0.0.9
 multidict==6.0.2
