--- a/crawlers/deploy/amoy-historical-crawl-events.service
+++ b/crawlers/deploy/amoy-historical-crawl-events.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Mumbai moonworm crawler
+Description=Amoy historical crawler events
 After=network.target
 StartLimitIntervalSec=300
 StartLimitBurst=3
@@ -9,9 +9,9 @@ WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 Restart=on-failure
 RestartSec=15s
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli crawl -b mumbai --confirmations 40
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli historical-crawl --blockchain-type amoy --find-deployed-blocks --end 0 --tasks-journal --only-events
 CPUWeight=70
-SyslogIdentifier=mumbai-moonworm-crawler
+SyslogIdentifier=amoy-historical-crawl-events
 
 [Install]
 WantedBy=multi-user.target
