--- a/nodebalancer/sample.env
+++ b/nodebalancer/sample.env
@@ -3,8 +3,9 @@ export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export NB_BUGOUT_TIMEOUT_SECONDS=15
 export MOONSTREAM_APPLICATION_ID="<application_id_to_controll_access>"
 export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream.to,https://portal.moonstream.to"
-export NB_CONTROLLER_TOKEN="<token_of_controller_user>"
-export NB_CONTROLLER_ACCESS_ID="<controller_access_id_for_internal_usage>"
+export NB_CONTROLLER_USER_ID="<bugout_id_of_nodebalancer_user>"
+export NB_CONTROLLER_TOKEN="<token_of_nodebalancer_user>"
+export NB_CONTROLLER_ACCESS_ID="<nodebalancer_access_id_for_internal_usage>"
 
 # Error humbug reporter
 export HUMBUG_REPORTER_NODE_BALANCER_TOKEN="<bugout_humbug_token_for_crash_reports>"
