Revert "Fix nodebalancer CLI and removed autogen accesses"

--- a/nodebalancer/deploy/nodebalancer.service
+++ b/nodebalancer/deploy/nodebalancer.service
@@ -10,10 +10,10 @@ EnvironmentFile=/home/ubuntu/nodebalancer-secrets/app.env
 Restart=on-failure
 RestartSec=15s
 ExecStart=/home/ubuntu/api/nodebalancer/nodebalancer server \
-    --host "${AWS_LOCAL_IPV4}" \
-    --port 8544 \
-    --healthcheck \
-    --config /home/ubuntu/.nodebalancer/config.json
+    -host "${AWS_LOCAL_IPV4}" \
+    -port 8544 \
+    -healthcheck \
+    -config /home/ubuntu/.nodebalancer/config.json
 SyslogIdentifier=nodebalancer
 
 [Install]
