--- a/.github/workflows/release.types.python.yml
+++ b/.github/workflows/release.types.python.yml
@@ -26,5 +26,5 @@ jobs:
           TWINE_USERNAME: "__token__"
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN_MOONSTREAM_TYPES }}
         run: |
-          python setup.py sdist bdist_wheel
+          python -m build
           twine upload dist/*
