--- a/moonstreamapi/requirements.txt
+++ b/moonstreamapi/requirements.txt
@@ -38,7 +38,8 @@ Mako==1.2.3
 MarkupSafe==2.1.1
 moonstream==0.1.2
 moonstreamdb==0.4.6
-moonstreamdb-v3==0.1.3
+moonstreamdb-v3==0.1.4
+moonstream-types==0.0.11
 multiaddr==0.0.9
 multidict==6.0.2
 netaddr==0.8.0
