Controll cache with env vars

--- a/nodebalancer/sample.env
+++ b/nodebalancer/sample.env
@@ -6,6 +6,9 @@ export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream
 export NB_CONTROLLER_USER_ID="<bugout_id_of_nodebalancer_user>"
 export NB_CONTROLLER_TOKEN="<token_of_nodebalancer_user>"
 export NB_CONTROLLER_ACCESS_ID="<nodebalancer_access_id_for_internal_usage>"
+export NB_CACHE_CLEANING_INTERVAL=10
+export NB_CACHE_ACCESS_ID_LIFETIME=120
+export NB_CACHE_ACCESS_ID_SESSION_LIFETIME=900
 
 # Error humbug reporter
 export HUMBUG_REPORTER_NODE_BALANCER_TOKEN="<bugout_humbug_token_for_crash_reports>"
