--- a/crawlers/deploy/game7-testnet-state.service
+++ b/crawlers/deploy/game7-testnet-state.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=Execute Game7 state crawler
+Description=Execute Game7 testnet state crawler
 After=network.target
 
 [Service]
 Type=oneshot
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.state_crawler.cli crawl-jobs --moonstream-token "${MOONSTREAM_PUBLIC_QUERIES_DATA_ACCESS_TOKEN}" --blockchain game7
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.state_crawler.cli crawl-jobs --moonstream-token "${MOONSTREAM_PUBLIC_QUERIES_DATA_ACCESS_TOKEN}" --blockchain game7_testnet
 CPUWeight=60
-SyslogIdentifier=game7-state
+SyslogIdentifier=game7-testnet-state
