--- a/.github/workflows/release.moonstreamdb.yml
+++ b/.github/workflows/release.moonstreamdb.yml
@@ -11,7 +11,7 @@ defaults:
 
 jobs:
   publish:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
